--- a/styles/main.css
+++ b/styles/main.css
@@ -59,20 +59,21 @@ header.main{
 			display: block;
 			position: absolute;
 			top: 0;
-			width: 100%;
+			width: 57px;
+			max-width: 100%;
 			height: 100%;
-			background: url(../images/floral-motif-mobile.svg);
+			background-image: url(../images/floral-motif-mobile.svg);
 			background-size: contain;
 			background-repeat: no-repeat;
 		}
 
 		header.main h2::before{
-			left: -18.75vw;
+			left: -64px;
 			background-position: left center;
 		}
 
 		header.main h2::after{
-			right: -18.75vw;
+			right: -64px;
 			background-position: left center;
 
 			transform: scaleX(-1);
@@ -128,12 +129,28 @@ nav.main{
 }
 
 img{
+	display: block;
 	width: 100%;
 }
 
 /* Smablet-up screens (larger than most phones) */
 @media only screen and (min-width: 640px) {
-	
+	header.main h2::before,
+	header.main h2::after{
+		background-image: url(../images/floral-motif-smablet.svg);
+	}
+
+		header.main h2::before{
+			left: -18.75vw;
+			background-position: left center;
+		}
+
+		header.main h2::after{
+			right: -18.75vw;
+			background-position: left center;
+
+			transform: scaleX(-1);
+		}
 }
 
 
