--- a/styles/main.css
+++ b/styles/main.css
@@ -13,144 +13,162 @@
 	outline: 1px dotted rgba(255,0,0,.25);
 }*/
 
-html, body{
+html,
+body {
 	background-color: white;
 	background-image: url(../images/Speckletone-Background.png);
 
-	font-family: "Jacques Francois", serif;
-	font-size: 16px; /* 1rem */
 	color: #382923;
+	font-family: "Jacques Francois", serif;
+	font-size: 18px; /* 1rem */
 }
 
-header.main{
+header.main {
 	position: relative;
 	text-align: center;
 }
 
-	header.main h1{
+	header.main h1 {
 		margin-bottom: 0;
 
+		color: #69B288;
 		font-family: "Quicksand", sans-serif;
 		font-size: 8.33vw;
 		font-weight: 300;
 		text-transform: uppercase;
-		color: #69B288;
 	}
 
-		header.main h1 a{
+		header.main h1 a {
 			color: inherit;
 			text-decoration: none;
 		}
 
-	header.main h2{
+	header.main h2 {
 		display: inline-block;
-		position: relative;
-		margin-top: 0;
 		margin-bottom: 0;
+		margin-top: 0;
+		position: relative;
 
+		color: #9FDDBD;
 		font-family: "odstemplikbold", sans-serif;
 		font-size: 8.33vw;
 		text-transform: lowercase;
-		color: #9FDDBD;
 	}
 
 		header.main h2::before,
-		header.main h2::after{
-			content: "";
+		header.main h2::after {
 			display: block;
+			height: 100%;
+			max-width: 100%;
 			position: absolute;
 			top: 0;
 			width: 57px;
-			max-width: 100%;
-			height: 100%;
+
 			background-image: url(../images/floral-motif-mobile.svg);
-			background-size: contain;
 			background-repeat: no-repeat;
+			background-size: contain;
+
+			content: "";
 		}
 
-		header.main h2::before{
+		header.main h2::before {
 			left: -64px;
+
 			background-position: left center;
 		}
 
-		header.main h2::after{
+		header.main h2::after {
 			right: -64px;
+
 			background-position: left center;
 
 			transform: scaleX(-1);
 		}
 
-hr{
+hr {
 	height: 1px;
-	background-color: #91973F;
-	border: 0;
+	max-width: 1280px;
 	position: relative;
 	width: 90%;
-	max-width: 1280px;
+
+	background-color: #91973F;
+
+	border: 0;
 }
 
 	hr::before,
-	hr::after{
-		content: "";
+	hr::after {
 		display: block;
-		position: absolute;
 		bottom: -7px;
-		width: 23px;
 		height: 13px;
+		position: absolute;
+		width: 23px;
+
 		background: url(../images/floral-motif-line-break.svg);
 		background-size: 23px 13px;
+
+		content: "";
 	}
 
-	hr::before{
+	hr::before {
 		left: -22px;
 	}
 
-	hr::after{
+	hr::after {
 		right: -22px;
 
 		transform: scaleX(-1);
 	}
 
-nav.main{
+nav.main {
 	text-align: center;
 }
 
-	nav.main a{
+	nav.main a {
 		display: inline-block;
 		padding: 0.5em 0.75em;
 
+		color: #382923;
 		text-decoration: none;
 		text-transform: lowercase;
-		color: #382923;
 	}
 
-.grid{
-	max-width: 1280px;
+.grid {
 	margin: 0 auto;
+	max-width: 1280px;
 }
 
 	.grid > * {
-		padding: 1em;
+		padding: 0.75em;
 	}
 
-img{
+img {
 	display: block;
 	width: 100%;
+}
+
+.thumbs a {
+	color: #999;
+	font-style: italic;
+	line-height: 3em;
+	text-align: center;
+	text-decoration: none;
 }
 
 /* Smablet-up screens (larger than most phones) */
 @media only screen and (min-width: 640px) {
 	header.main h2::before,
-	header.main h2::after{
+	header.main h2::after {
 		width: 110px;
+
 		background-image: url(../images/floral-motif-smablet.svg);
 	}
 
-		header.main h2::before{
+		header.main h2::before {
 			left: -125px;
 		}
 
-		header.main h2::after{
+		header.main h2::after {
 			right: -125px;
 		}
 }
@@ -158,30 +176,31 @@ img{
 
 /* Medium-up screens (larger than a small tablet) */
 @media only screen and (min-width: 768px) {
-	header.main h1{
+	header.main h1 {
 		font-size: 60px;
 	}
 
-	header.main h2{
+	header.main h2 {
 		font-size: 48px;
 	}
 
 	header.main h2::before,
-	header.main h2::after{
+	header.main h2::after {
 		width: 141px;
+
 		background-image: url(../images/floral-motif-tablet.svg);
 	}
 
-		header.main h2::before{
+		header.main h2::before {
 			left: -155px;
 		}
 
-		header.main h2::after{
+		header.main h2::after {
 			right: -155px;
 		}
 
 	.grid > * {
-		padding: 2em;
+		padding: 1.5em;
 	}
 }
 
