Name bg image more sanely ;)

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@
 html,
 body {
 	background-color: white;
-	background-image: url(../images/Speckletone-Background.png);
+	background-image: url(../images/speckletone-bg.png);
 
 	color: #382923;
 	font-family: "Jacques Francois", serif;
