--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,9 @@
 /* CSS main stylesheet */
 
-/* Use odstemplikbold for subtitle */
+/* FONTS
+ 	font-family: "Montserrat", sans-serif;
+	font-family: "Lora", serif;
+*/
 
 /* COLORS
 	Turquoise:  #69B288;
@@ -19,71 +22,20 @@ body {
 	background-image: url(../images/speckletone-bg.png);
 
 	color: #382923;
-	font-family: "Jacques Francois", serif;
+	font-family: "Lora", serif;
 	font-size: 18px; /* 1rem */
 }
 
 header.main {
-	position: relative;
-	text-align: center;
+	max-width: 400px;
+	margin: 2em auto;
 }
 
-	header.main h1 {
-		margin-bottom: 0;
+header.main > * {
+	color: transparent;
+	font-size: 0px!important;
+}
 
-		color: #69B288;
-		font-family: "Quicksand", sans-serif;
-		font-size: 8.33vw;
-		font-weight: 300;
-		text-transform: uppercase;
-	}
-
-		header.main h1 a {
-			color: inherit;
-			text-decoration: none;
-		}
-
-	header.main h2 {
-		display: inline-block;
-		margin-bottom: 0;
-		margin-top: 0;
-		position: relative;
-
-		color: #9FDDBD;
-		font-family: "odstemplikbold", sans-serif;
-		font-size: 8.33vw;
-		text-transform: lowercase;
-	}
-
-		header.main h2::before,
-		header.main h2::after {
-			display: block;
-			height: 100%;
-			max-width: 100%;
-			position: absolute;
-			top: 0;
-			width: 57px;
-
-			background-image: url(../images/floral-motif-mobile.svg);
-			background-repeat: no-repeat;
-			background-size: contain;
-
-			content: "";
-		}
-
-		header.main h2::before {
-			left: -64px;
-
-			background-position: left center;
-		}
-
-		header.main h2::after {
-			right: -64px;
-
-			background-position: left center;
-
-			transform: scaleX(-1);
-		}
 
 hr {
 	height: 1px;
