--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,7 @@ body {
 	color: #5e6060;
 	font-family: "Lora", serif;
 	font-size: 17.5px; /* 1rem */
+	line-height: 1.5em;
 }
 
 header.main {
@@ -34,6 +35,7 @@ header.main {
 	header.main > * {
 		color: transparent;
 		font-size: 0px!important;
+		line-height: 0px!important;
 	}
 
 nav.main {
@@ -82,6 +84,22 @@ img {
 	line-height: 3em;
 	text-align: center;
 	text-decoration: none;
+}
+
+.about img {
+	margin-top: 1em;
+}
+
+h1 {
+	font-family: "Montserrat", sans-serif;
+	font-size: 1.5rem;
+	font-weight: 400;
+	line-height: 1.25em;
+	text-transform: uppercase;
+}
+
+p {
+	line-height: 1.5em;
 }
 
 /* Smablet-up screens (larger than most phones) */
