--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,7 @@
-/* CSS main stylesheet */
+---
+# this ensures Jekyll reads the file to be transformed into CSS later
+# only Main files contain this front matter, not partials.
+---
 
 /* FONTS
  	font-family: "Montserrat", sans-serif;
