changed link styles... again

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -142,6 +142,7 @@ p {
 a {
 	color: $turquoise;
 	font-weight: 700;
+	text-decoration: none;
 }
 
 /* Smablet-up screens (larger than most phones) */
