--- a/styles/main.scss
+++ b/styles/main.scss
@@ -146,25 +146,33 @@ img {
 			transition: opacity 250ms ease;
 		}
 
-		&:hover img {
-			opacity: 0.35;
-		}
-
 		&::after {
-			content: "Download Recipe";
 			display: block;
-			width: 62.5%;
+			left: 50%;
 			position: absolute;
 			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+			width: 62.5%;
 
+			color: white;
 			font-family: $sans;
 			font-size: 2em;
 			line-height: 1.25em;
 			text-align: center;
 			text-transform: uppercase;
-			color: white;
+
+			content: "Download Recipe";
+			opacity: 0;
+			transform: translate(-50%, -50%);
+		}
+
+		&:hover {
+			img {
+				opacity: 0.35;
+			}
+
+			&::before {
+				opacity: 1;
+			}
 		}
 	}
 }
