--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,3 @@
 <nav class="main">
-	{% assign pages = site.pages | sort:"order" %}
-	{% for page in pages %}
-		{% if page.order %}
-			{% if page.title %}
-			<a href="{{ page.url }}">{{ page.title }}</a>
-			{% endif %}
-		{% endif %}
-	{% endfor %}
+	{% assign pages = site.pages | sort:"order" %}{% for page in pages %}{% if page.order %}{% if page.title %}<a href="{{ page.url }}">{{ page.title }}</a>{% endif %}{% endif %}{% endfor %}
 </nav>
