--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 	{% include head.html %}
-
 	<body>
-
 		{% include header.html %}
 		{% include nav.html %}
 
@@ -13,7 +10,6 @@
 		</div>
 
 		{% include footer.html %}
-
+		{% include analytics.html %}
 	</body>
-
 </html>
