--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 
 	<meta name="author" content="{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}">
 	<meta name="theme-color" content="#8dd8cf">
-	{% if page.image %}<meta property="og:image" content="{{ '/images/pages/' | prepend: site.baseurl }}{{ page.image }}" />{% endif %}
+	{% if page.image %}<meta property="og:image" content="{{ '/images/pages/' | prepend: site.baseurl | prepend: site.url }}{{ page.image }}" />{% endif %}
 
 	<link href="{{ '/images/favicon-256.png' | prepend: site.baseurl | prepend: site.url }}" rel="icon" type="image/png" sizes="256x256">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Lora:400,400italic" rel="stylesheet" type="text/css">
