--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
 	<!-- OpenGraph tags, i.e. for Facebook -->
 	<meta property="og:url" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" rel="canonical" />
 	<meta property="og:type" content="website" />
+	<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
 	{% if page.image %}<meta property="og:image" content="{{ '/images/pages/' | prepend: site.baseurl | prepend: site.url }}{{ page.image }}" />{% endif %}
 	{% if page.image-width %}<meta property="og:image:width" content="{{ page.image-width }}" />{% endif %}
 	{% if page.image-height %}<meta property="og:image:height" content="{{ page.image-height }}" />{% endif %}
