--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,22 @@
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<title>{% if page.title %}{{ page.title }} &middot; {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" rel="canonical">
 	<link href="{{ '/images/favicon-256.png' | prepend: site.baseurl | prepend: site.url }}" rel="icon" type="image/png" sizes="256x256">
 
 	<!-- Standard meta tags -->
-	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-	<meta name="author" content="{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}">
-	<meta name="theme-color" content="#8dd8cf">
+	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+	<meta name="author" content="{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}" />
+	<meta name="theme-color" content="#8dd8cf" />
 
 	<!-- OpenGraph tags, i.e. for Facebook -->
-	<meta property="og:url" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" rel="canonical" />
+	<meta property="og:url" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+	<meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
 	{% if page.image %}<meta property="og:image" content="{{ '/images/pages/' | prepend: site.baseurl | prepend: site.url }}{{ page.image }}" />{% endif %}
 	{% if page.image-width %}<meta property="og:image:width" content="{{ page.image-width }}" />{% endif %}
 	{% if page.image-height %}<meta property="og:image:height" content="{{ page.image-height }}" />{% endif %}
