--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 	<meta name="theme-color" content="#8dd8cf" />
 
 	<!-- OpenGraph tags, i.e. for Facebook -->
-	<meta property="og:url" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+	<meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
 	<meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
