--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,21 +3,13 @@ layout: default
 ---
 
 <article class="grid page {{ page.classes }}">
-	{% if page.image %}
-	<div class="whole medium-half large-third">
+	{% if page.image %}<div class="whole medium-half large-third">
 		<img src="{{ '/images/pages/' | prepend: site.baseurl }}{{ page.image }}" />
-	</div>
-	{% endif %}
-
+	</div>{% endif %}
 	<div class="whole medium-half large-two-thirds">
-		<h1 itemprop="name headline">{{ page.title }}</h1>
-
-		{% if page.date %}
-		<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
-		{% endif %}
-
+		{% if page.title %}<h1 itemprop="name headline">{{ page.title }}</h1>{% endif %}
+		{% if page.date %}<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>{% endif %}
 		{{ content }}
-
 	</div>
 
 </article>
