--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,17 +3,12 @@ layout: default
 ---
 
 <article class="grid about" itemprop="articleBody" itemscope itemtype="http://schema.org/CreativeWork">
-	<div class="whole medium-half large-two-thirds">
+	{% if page.image %}<div class="whole medium-half large-two-thirds">
 		<img src="{{ '/images/portfolio/' | prepend: site.baseurl }}{{ page.image }}" />
-	</div>
+	</div>{% endif %}
 	<div class="whole medium-half large-third">
-		<h1 itemprop="name headline">{{ page.title }}</h1>
-
-		{% if page.date %}
-		<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
-		{% endif %}
-
+		{% if page.title %}<h1 itemprop="name headline">{{ page.title }}</h1>{% endif %}
+		{% if page.date %}<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>{% endif %}
 		{{ content }}
-
 	</div>
 </article>
