--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -5,5 +5,6 @@
 	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 	ga('create', 'UA-70776951-1', 'auto');
+	ga('require', 'linkid');
 	ga('send', 'pageview');
 </script>
