--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Lora:400,400italic" rel="stylesheet" type="text/css">
 	<link href="http://cassidyjames.com/grid.css/grid.css" rel="stylesheet" type="text/css" media="all">
 	<link href="{{ '/styles/main.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css" media="all">
+
+	{% include analytics.html %}
 </head>
