--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -3,4 +3,4 @@ layout: default
 ---
 
 <script>window.location.replace("{{ page.redirect }}")</script>
-<a href="{{ page.redirect }}">Click here if your browser does not automatically redirect you.</a>
+<a href="{{ page.redirect }}" style="text-align: center;">Click here if your browser does not automatically redirect you.</a>
