--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -5,12 +5,12 @@
 
 // Here we define the breakpoints which will become the upper border for each media size.
 // The function em-calc() calculates the em-value from a px-value.
-$small-breakpoint:   640  !default;
-$smablet-breakpoint: 768  !default;
-$medium-breakpoint:  1024 !default;
-$grid-breakpoint:    1280 !default;
-$large-breakpoint:   1440 !default;
-$xlarge-breakpoint:  1920 !default;
+$small-breakpoint:   640px  !default;
+$smablet-breakpoint: 768px  !default;
+$medium-breakpoint:  1024px !default;
+$grid-breakpoint:    1280px !default;
+$large-breakpoint:   1440px !default;
+$xlarge-breakpoint:  1920px !default;
 
 // Here we define the lower and upper bounds for each media size
 $small-range:   (0, $small-breakpoint) !default; /* 0, 640px */
