--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
 	{% if page.image-height %}<meta property="og:image:height" content="{{ page.image-height }}" />{% endif %}
 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Lora:400,400italic" rel="stylesheet" type="text/css">
-	<link href="http://cassidyjames.com/grid.css/grid.css" rel="stylesheet" type="text/css" media="all">
+	<link href="https://cassidyjames.github.io/grid.css/grid.css" rel="stylesheet" type="text/css" media="all">
 	<link href="{{ '/styles/main.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css" media="all">
 
 	{% include analytics.html %}
