--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 		<img src="{{ '/images/pages/' | prepend: site.baseurl }}{{ page.image }}" />
 	</div>{% endif %}
 	<div class="whole medium-half large-two-thirds">
-		{% if page.title %}<h1 itemprop="name headline">{{ page.title }}</h1>{% endif %}
+		<!--{% if page.title %}<h1 itemprop="name headline">{{ page.title }}</h1>{% endif %}-->
 		{% if page.date %}<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>{% endif %}
 		{{ content }}
 	</div>
