--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 	{% if page.image %}<div class="whole medium-half large-third">
 		<img src="{{ '/images/pages/' | prepend: site.baseurl }}{{ page.image }}" />
 	</div>{% endif %}
-	<div class="whole medium-half large-two-thirds">
+	<div class="whole {% if page.image %}medium-half large-two-thirds{% endif %}">
 		<!--{% if page.title %}<h1 itemprop="name headline">{{ page.title }}</h1>{% endif %}-->
 		{% if page.date %}<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>{% endif %}
 		{{ content }}
